# Constellation_Predict

./: .gitignore  README.md  build.sh  pyproject.toml  start.sh
ConstellationPredictor/: .env.example  manage.py  requirements.txt
ConstellationPredictor/ConstellationPredictor/: asgi.py  settings.py  urls.py  wsgi.py
ConstellationPredictor/Locator/: admin.py  apps.py  models.py  urls.py  views.py
ConstellationPredictor/Locator/migrations/: 0001_initial.py
ConstellationPredictor/Locator/templates/Locator/: index.html
ConstellationPredictor/Predictor/: urls.py  views.py
ConstellationPredictor/Predictor/REAL_TIME_DETECTOR/: README.dataset.txt  README.roboflow.txt  data.yaml
ConstellationPredictor/Predictor/REAL_TIME_DETECTOR/runs/detect/predict2/: 0.avi
ConstellationPredictor/Predictor/REAL_TIME_DETECTOR/runs/detect/predict3/: 0.avi
ConstellationPredictor/Predictor/REAL_TIME_DETECTOR/runs/detect/predict4/: 0.avi
ConstellationPredictor/Predictor/REAL_TIME_DETECTOR/runs/detect/train/: args.yaml  results.csv
ConstellationPredictor/Predictor/templates/: base.html  database.html  detect.html  home.html  predict.html  results.html  upload.html
ConstellationPredictor/chatbot/: urls.py  views.py
ConstellationPredictor/chatbot/templates/: index.html
